--- a/layouts/partials/home/profile.html
+++ b/layouts/partials/home/profile.html
@@ -15,6 +15,13 @@
 
     <div class="featured">
         {{ partial "home/featured.html" . }}
+        <!-- 20230806 more-content start -->
+        <div class="more-content" style="margin-top: 20px;border-top:1px dashed #6c757d">
+            <blockquote>
+                <p>📣 首页篇幅有限<br>🏃 更多内容请移步「<a href="{{ "archives/" | relURL }}">文章列表</a>」查看</p>
+            </blockquote>
+        </div> 
+        <!-- 20230806 more-content start -->
     </div>
 
 </div>
