--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -6,7 +6,7 @@
       <article>
         <div class="blog-card">
           <h3><a href="{{ .RelPermalink }}">{{ .Params.title }}</a></h3>
-          {{ partial "blog/meta.html" . }}
+          {{ partial "posts/meta.html" . }}
           {{ .Summary }}
         </div>
       </article>
