--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <p>&copy; {{ now.Year }} <a href="{{ `` | absURL }}">{{ site.Title }}</a>
+    <p>&copy; 2020 - {{ now.Year }} <a href="{{ `` | absURL }}">{{ site.Title }}</a>
     Powered by
     <a href="https://gohugo.io/" rel="noopener" target="_blank">Hugo️️</a>
     <a href="https://github.com/guangzhengli/hugo-theme-ladder" rel="noopener" target="_blank">Ladder</a>
